--- a/meproj/myapp/templates/home.html
+++ b/meproj/myapp/templates/home.html
@@ -7,24 +7,46 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-        <link rel="stylesheet" href="../static/style.css">
+        <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body>
-    <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-    <a class="navbar-brand" href="#">About me!</a>
+    <nav class="navbar px-3 mb-3">
+        <a class="navbar-brand" href="#">Connor</a>
     </nav>
-    <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
-    <h4 id="scrollspyHeading1">Im Connor</h4>
-    <p>Born in Birmingham, been out of the country once, have a lovely group of friends and enjoy sports</p>
-    <h4 id="scrollspyHeading2">Competition</h4>
-    <p>Since 2022 i have been competing in powerlifting shows and meets, amazing comunity, incredible people and all round my favorite sport</p>
-    <h4 id="scrollspyHeading3">Uni of staffs NFL</h4>
-    <p>Thinking about joining the uni of staffs NFL team</p>
-    <h4 id="scrollspyHeading4">Bouldering</h4>
-    <p>Really like rock climbing, quite new to the sport but after my first few sessions ive started to really enjoy it</p>
-    <h4 id="scrollspyHeading5">Dogs</h4>
-    <p>I have 2 dogs which i love so so so much, miss them loads (as they live back home with my parents)</p>
+    <div class="container mt-3" id="frontPageBoxes">
+        <div class="row">
+            <h2>A bit about me</h2>
+            <div class="col">
+                <div class="mt-4 p-5 bg-primary text-white rounded">
+                    <h1>Yep that's me</h1> 
+                    <p>Just a little guy</p> 
+                </div>
+            </div>
+            <div class="col">
+                <div class="mt-4 p-5 bg-primary text-white rounded">
+                    <h1>Yep that's me</h1> 
+                    <p>Just a little guy</p> 
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="mt-4 p-5 bg-primary text-white rounded">
+                    <h1>Yep that's me</h1> 
+                    <p>Just a little guy</p> 
+                </div>
+            </div>
+            <div class="col">
+                <div class="mt-4 p-5 bg-primary text-white rounded">
+                    <h1>Yep that's me</h1> 
+                    <p>Just a little guy</p> 
+                </div>
+            </div>
+        </div>
     </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    </body>
+    <script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script>    
+</body>
 </html>
