--- a/meproj/myapp/templates/home.html
+++ b/meproj/myapp/templates/home.html
@@ -4,14 +4,26 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <link rel="stylesheet" href="../static/css/style.css">
     </head>
+    
     <body>
-    <nav class="navbar px-3 mb-3">
+    <nav class="navbar navbar-expand-lg px-4 rounded-bottom"> 
         <a class="navbar-brand" href="#">Connor</a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a href="#" class="nav-link" style="color: white;">Contact</a>
+            </li>
+            <li class="nav-item ">
+                <a href="#" class="nav-link" style="color: white;">My Company</a>
+            </li>
+        </ul>
     </nav>
     <div class="container mt-3" id="frontPageBoxes">
         <div class="row">
