--- a/meproj/myapp/templates/home.html
+++ b/meproj/myapp/templates/home.html
@@ -15,7 +15,7 @@
     
     <body>
     <nav class="navbar navbar-expand-lg px-4 rounded-bottom"> 
-        <a class="navbar-brand" href="#">Connor</a>
+        <a class="navbar-brand" href="#"><img src="../static/assets/88324608.png" class="spin" style="width: 75px; height: 75px;" id="spinner"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a href="#" class="nav-link" style="color: white;">Contact</a>
@@ -27,15 +27,15 @@
     </nav>
     <div class="container mt-3" id="frontPageBoxes">
         <div class="row">
-            <h2>A bit about me</h2>
+            <h2 class="abm-color">A bit about me</h2>
             <div class="col">
-                <div class="mt-4 p-5 bg-primary text-white rounded">
+                <div class="mt-4 p-5 background-colours text-white rounded">
                     <h1>Yep that's me</h1> 
                     <p>Just a little guy</p> 
                 </div>
             </div>
             <div class="col">
-                <div class="mt-4 p-5 bg-primary text-white rounded">
+                <div class="mt-4 p-5 background-colours text-white rounded">
                     <h1>Yep that's me</h1> 
                     <p>Just a little guy</p> 
                 </div>
@@ -43,13 +43,13 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="mt-4 p-5 bg-primary text-white rounded">
+                <div class="mt-4 p-5 background-colours text-white rounded">
                     <h1>Yep that's me</h1> 
                     <p>Just a little guy</p> 
                 </div>
             </div>
             <div class="col">
-                <div class="mt-4 p-5 bg-primary text-white rounded">
+                <div class="mt-4 p-5 background-colours text-white rounded">
                     <h1>Yep that's me</h1> 
                     <p>Just a little guy</p> 
                 </div>
@@ -59,6 +59,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script>    
+    <script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script>
+    <script src="../static/scripts/spinner.JS"></script>
 </body>
 </html>
