--- a/meproj/myapp/templates/home.html
+++ b/meproj/myapp/templates/home.html
@@ -29,29 +29,29 @@
         <div class="row">
             <h2 class="abm-color">A bit about me</h2>
             <div class="col">
-                <div class="mt-4 p-5 background-colours text-white rounded">
-                    <h1>Yep that's me</h1> 
-                    <p>Just a little guy</p> 
+                <div class="mt-4 p-5 background-colours text-white rounded" style="height: 15rem;" id="boxes">
+                    <h1>Powerlifting</h1> 
+                    <p>Since September 2022 i've been part of many groups and stages of powerlifters and bodybuilders and competed on local shows on several occasiaons</p> 
                 </div>
             </div>
             <div class="col">
-                <div class="mt-4 p-5 background-colours text-white rounded">
-                    <h1>Yep that's me</h1> 
-                    <p>Just a little guy</p> 
+                <div class="mt-4 p-5 background-colours text-white rounded" style="height: 15rem;" id="boxes">
+                    <h1>Dogs</h1> 
+                    <p>I have 2 dogs that i love so so much, Barlie and Hops unfortunately they live back at home with my parents</p> 
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <div class="mt-4 p-5 background-colours text-white rounded">
-                    <h1>Yep that's me</h1> 
-                    <p>Just a little guy</p> 
+                <div class="mt-4 p-5 background-colours text-white rounded" style="height: 15rem;" id="boxes">
+                    <h1>Uni of staffs NFL</h1> 
+                    <p>Recently joined the american football team for staffs</p> 
                 </div>
             </div>
             <div class="col">
-                <div class="mt-4 p-5 background-colours text-white rounded">
-                    <h1>Yep that's me</h1> 
-                    <p>Just a little guy</p> 
+                <div class="mt-4 p-5 background-colours text-white rounded" style="height: 15rem;" id="boxes">
+                    <h1>Bouldering/Rock Climbing</h1> 
+                    <p>Along side the nfl stuff i also climb with our bouldering society</p> 
                 </div>
             </div>
         </div>
