--- a/meproj/myapp/static/css/style.css
+++ b/meproj/myapp/static/css/style.css
@@ -11,7 +11,7 @@ nav{
 }
 
 .navbar-brand, .abm-color{
-    color: #f4f5fd !important;
+    color: #5e3e85 !important;
 }
 
 .background-colours{
@@ -43,6 +43,34 @@ nav{
 }
 
 
-#boxes{
-    animation: fadeIn 1s ease-in-out;
+#boxes {
+    animation: fadeIn 1.5s ease-in-out;
+}
+
+#abam{
+    animation: fadeIn 1.9s ease-in-out;
+}
+
+svg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+}
+
+.svg-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+.svg-background svg {
+    width: 100%;
+    height: 100%;
 }
