--- a/meproj/myapp/templates/home.html
+++ b/meproj/myapp/templates/home.html
@@ -96,6 +96,15 @@
             </div>
         </div>
     </div>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col">
+                <div class="d-flex">
+                    hello!
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
