--- a/meproj/myapp/templates/home.html
+++ b/meproj/myapp/templates/home.html
@@ -18,7 +18,7 @@
     </head>
     
     <body>
-    <nav class="navbar navbar-expand-lg px-4 rounded-bottom"> 
+    <nav class="navbar navbar-expand-lg px-4" id="nav"> 
         <a class="navbar-brand" href="#"><img src="../static/assets/88324608.png" class="spin" style="width: 75px; height: 75px;" id="spinner"></a>
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -96,18 +96,17 @@
             </div>
         </div>
     </div>
-    <div class="container mt-3">
-        <div class="row">
-            <div class="col">
-                <div class="d-flex">
-                    hello!
-                </div>
-            </div>
-        </div>
+    <br>
+    <div class="d-flex justify-content-center" id="abam">
+        <label class="switch">
+            <input type="checkbox" onclick="darkMode()">
+            <span class="slider round"></span>
+        </label>
     </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="../static/scripts/spinner.JS"></script>
+    <script src="../static/scripts/darkMode.JS"></script>
 </body>
 </html>
