--- a/meproj/myapp/static/css/style.css
+++ b/meproj/myapp/static/css/style.css
@@ -1,35 +1,60 @@
+:root{
+  --bg: #ffffff;
+  --text: #111111;
+  --nav-bg: #4ECDC4;
+}
+
 body{
-    background-color: white;
-    font-family: "Montserrat", sans-serif;
-    font-style: italic;
-    animation: fadeIn 0.5s ease-in-out;
+  background-color: white;
+  font-family: "Montserrat", sans-serif;
+  font-style: italic;
+  background-color: var(--bg);
+  color: var(--text);
+  transition: background-color 500ms ease, color 500ms ease;
+  animation: fadeIn 0.5s ease-in-out;
 }
 
 body.dark-mode {
-    background-color: #292F36;
+  --bg: #292F36;
+  --text: #000000;
+  --nav-bg: #247f79;
 }
 
 nav.dark-mode {
-    background-color: #247f79;
+  background-color: #247f79;
 }
 
 nav{
-    background-color: #4ECDC4;
-    line-height: 400%;
+  position: fixed;
+  line-height: 400%;
+  background-color: var(--nav-bg);
+  transition: background-color 500ms ease;
 }
 
-.navbar-brand, .abm-color{
-    color: #5e3e85 !important;
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/@media */
+
+@media (width < 1919px) {
+  nav {
+    line-height: normal;
+  }
 }
 
-.background-colours{
-    background-color: #247f79;
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/@media */
+
+.boxes{
+  background-color:#4ECDC4;
+  transition: background-color 500ms ease, color 500ms ease;
 }
 
+.boxes.dark-mode{
+  background-color:#247f79;
+  transition: background-color 500ms ease, color 500ms ease;
+
+}
 
 #spinner {
-    width: 200px;
-    height: 200px;
+  width: 200px;
+  height: 200px;
 }
 
 @keyframes spin {
@@ -52,38 +77,39 @@ nav{
 
 
 #boxes {
-    animation: fadeIn 1.5s ease-in-out;
+  animation: fadeIn 1.5s ease-in-out;
 }
 
 #abam{
-    animation: fadeIn 1.9s ease-in-out;
+  animation: fadeIn 1.9s ease-in-out;
 }
 
 svg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
 }
 
 .svg-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: -1;
-    overflow: hidden;
-    pointer-events: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  overflow: hidden;
+  pointer-events: none;
 }
 
 .svg-background svg {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
-
+/* From here to a bit down i got this css off a site */
+/* https://www.w3schools.com/howto/howto_css_switch.asp */
 
 .switch {
   position: relative;
@@ -92,14 +118,14 @@ svg {
   height: 34px;
 }
 
-/* Hide default HTML checkbox */
+
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
+
 .slider {
   position: absolute;
   cursor: pointer;
@@ -138,7 +164,6 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-/* Rounded sliders */
 .slider.round {
   border-radius: 34px;
 }
@@ -146,3 +171,7 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+/* Slider code ends */
+
+
