--- a/meproj/myapp/templates/home.html
+++ b/meproj/myapp/templates/home.html
@@ -71,7 +71,7 @@
             <path fill="#00f5d4" class="in-bottom" d="M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z"/>
         </svg>
     </div>
-    <!--This SVG code was not mine, nor was it my art-->
+    <!--This SVG code was not mine, nor was it my art, rotation keyframes are mine-->
     <!--Dont have the time to make a javascript file to change the colours though-->
 
     <div class="container mt-3" id="frontPageBoxes">
@@ -108,13 +108,15 @@
 
     
     <div class="d-flex justify-content-center" id="abam">
-        <b><p>Light --></p></b>
         <label class="switch">
             <input type="checkbox" onclick="darkMode()">
             <span class="slider round"></span>
         </label>
-        <b><p><-- Dark</p></b>
     </div>
+    <div class="d-flex justify-content-center mb-4">
+        <h5 id="lightDark">Light mode</h5>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="../static/scripts/spinner.JS"></script>
     <script src="../static/scripts/darkMode.JS"></script>
